Bug 93874 - Dragging xvideo playing on sprite off lhs of screen kills X
Summary: Dragging xvideo playing on sprite off lhs of screen kills X
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-26 12:17 UTC by lornarmac
Modified: 2016-01-26 13:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
X log (301.36 KB, text/plain)
2016-01-26 12:17 UTC, lornarmac
no flags Details

Description lornarmac 2016-01-26 12:17:54 UTC
Created attachment 121303 [details]
X log

when playing an xvideo on sprite (eg mplayer -vo xv:port=104 ~/mnt/lin-ult/tools/Mplayer/videofolder/helloMoscow.mpg), if the video is dragged past the left hand edge of the screen then X dies (Fatal server error:sna_blt_fill_box:3326 assertion 'box->x1 >= 0' failed).
Comment 1 Chris Wilson 2016-01-26 12:52:21 UTC
commit bb8dc3ef37580a221a40ba3dcbde755edc59bb62
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 26 12:50:13 2016 +0000

    sna/video: ValidateGC before use
    
    We required the GC->pCompositeClip in order to apply the current Drawable's
    clip to video region, this requires us to call ValidateGC first.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=93874
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Thanks for the bug report. I'm confident that's the issue...
Comment 2 lornarmac 2016-01-26 13:00:28 UTC
(In reply to Chris Wilson from comment #1)
> commit bb8dc3ef37580a221a40ba3dcbde755edc59bb62
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Tue Jan 26 12:50:13 2016 +0000
> 
>     sna/video: ValidateGC before use
>     
>     We required the GC->pCompositeClip in order to apply the current
> Drawable's
>     clip to video region, this requires us to call ValidateGC first.
>     
>     Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=93874
>     Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
> 
> Thanks for the bug report. I'm confident that's the issue...

Confirmed - that's solved the problem, thank you.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.