sna/video: ValidateGC before use

We required the GC->pCompositeClip in order to apply the current Drawable's
clip to video region, this requires us to call ValidateGC first.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=93874
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>